# sistema-CEF

./: .gitignore  MAPEO_FRONTEND_BACKEND.md  README.md  copy.py  documentacion_backend.md  package.json
back/: .env-example  .env.ejemplo  .pylintrc  app.py  hola.txt  pylintrc  pyproject.toml  tunel_state.py
back/db/: __init__.py  construir_db.py  consultar_db.py  ejemplo_requerido.py  insertar_db.py  modulo_fechas.py  modulo_qr.py  nota.md  operaciones_comunes.py  operaciones_consulta_comunes.py  operaciones_eliminar_comunes.py  operaciones_insercion_comunes.py  operaciones_modificar_comunes.py  usuario_requerido.py
back/db/checkeos/: checkear_inputs.py  restricciones_objeto.py
back/db/decoradores/: decoradores_operaciones.py
back/db/operaciones/: __init__.py  borrar_db.py  commitear_db.py  conectar_db.py  construir_db.py  consultar_db.py  exception_handler.py  insertar_datos_prueba.py  insertar_db.py  modificar_db.py  seed_db.py  seed_db_demo.py
back/db/operaciones/actividad/: insertar_db.py
back/db/operaciones/actividades/: consultar_db.py  insertar_db.py
back/db/operaciones/administradores/: __init__.py  consultar_db.py  insertar_db.py  modificar_db.py
back/db/operaciones/asistencias/: consultar_db.py  insertar_db.py
back/db/operaciones/cancelaciones/: consultar_db.py  insertar_db.py
back/db/operaciones/clase_ocurrir_sala/: consultar_db.py  insertar_db.py  modificar_db.py
back/db/operaciones/clase_tener_mensualidad/: borrar_db.py  consultar_db.py  insertar_db.py
back/db/operaciones/clases/: borrar_db.py  consultar_db.py  insertar_db.py  modificar_db.py
back/db/operaciones/cuentas/: consultar_db.py  insertar_db.py
back/db/operaciones/descuentos/: consultar_db.py  insertar_db.py
back/db/operaciones/pagos/: borrar_db.py  (+3 more)
back/enums/: dias.py
back/implementations/: autentication.py
back/routes/: __init__.py  actividades_route.py  autenticacion_route.py  clases_route.py  empleados_route.py  listas_espera_route.py  mensualidad_route.py  metricas_route.py  notificaciones.py  pagos_route.py  permisos_route.py  profesores_route.py  reservas_route.py  salas_route.py  usuario_route.py
back/services/: __init__.py  actividades_service.py  autenticacion_service.py  clases_service.py  empleados_service.py  listas_espera_service.py  mensualidad_service.py  metricas_service.py  notificar_siguiente_service.py  pagos_service.py  permisos_service.py  profesores_service.py  reservas_service.py  salas_service.py  usuario_service.py
back/test_cases/: endpoint_test.py  sistema-CEF.postman_collection.json  test_cases_consulta_db.py  test_clases.py  test_consultar_esqueleto.py  test_insertar_datos.py  test_login_service.py
back/test_cases/endpoints/: clases_service_testcase.py  listas_espera_testcase.py  mensualidades_testcase.py  metricas_service_testcase.py  reservas_service_testcase.py  usuarios_service_testcase.py
back/utils/: envio_mails.py  modulo_fechas.py  modulo_manejo_listas.py  operaciones_mp.py
(+113 files in other folders)
