[project]
name = "backend-cef"
version = "0.1.0"
package-mode = false
description = "Subsistema de la aplicación donde reside la lógica de negocios de la aplicación y el manejo de la base de datos."
authors = [
    {name = "Mariano Bazalar Vidal"},
    {name = "Estanislao Vegetti Moal"},
    {name = "Tobias Nahuel Funes"},
    {name = "Maximiliano Falasca"},
    {name = "Augusto José Lozada"}
]
license = "MIT License"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "resend (>=2.30.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "dateparser (>=1.4.0,<2.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "mercadopago (>=3.2.0,<4.0.0)",
    "ngrok (>=1.7.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "flask (>=3.1.3,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
