[tool.poetry]
name = "backend-cef"
version = "0.1.0"
description = "Subsistema de la aplicación donde reside la lógica de negocios de la aplicación y el manejo de la base de datos."
authors = [
    "Mariano Bazalar Vidal",
    "Estanislao Vegetti Moal",
    "Tobias Nahuel Funes",
    "Maximiliano Falasca",
    "Augusto José Lozada"
]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
flask = ">=3.1.3,<4.0.0"
flask-cors = ">=6.0.2,<7.0.0"
PyJWT = ">=2.8.0,<3.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
resend = ">=2.30.1,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
dateparser = ">=1.4.0,<2.0.0"
qrcode = {extras = ["pil"], version = ">=8.2,<9.0"}
mercadopago = ">=3.2.0,<4.0.0"
pyngrok = ">=8.1.2,<9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pylint = ">=4.0.5,<5.0.0"

[project]
name = "backend-cef"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
